# pilgrim

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/cli/: __init__.py  seed.py
backend/app/core/: __init__.py  config.py  error_handlers.py  exceptions.py  logging.py
backend/app/crawlers/: __init__.py  extraction.py  factory.py  html_sanitizer.py
backend/app/db/: database.py
backend/app/integrations/: __init__.py  llm_base.py  ollama_client.py  redis.py
backend/app/models/: __init__.py  base.py  callback_config.py  callback_log.py  crawl_config.py  crawl_job.py  crawl_job_result.py  crawl_schedule.py  email_notification_config.py  email_notification_log.py  enums.py  proxy_fetch_log.py  proxy_source_config.py  proxy_url_check_log.py  proxy_validation_log.py  sanitizer_config.py  schedule_config_link.py  schedule_proxy_source_link.py  schedule_url_target.py  seed_version.py  valid_proxy.py
backend/app/schemas/: activity.py  ai.py  crawl.py  crawl_config.py  proxy.py  responses.py  sanitizer_config.py  schedule.py  status.py
backend/app/services/: activity_service.py  ai_prompts.py  ai_service.py  callback_service.py  crawl_config_service.py  crawl_job_service.py  email_notification_service.py  proxy_parser.py  proxy_source_service.py  sanitizer.py  sanitizer_config_service.py  schedule_service.py  scrape_service.py  seed_service.py  valid_proxy_service.py
backend/app/workers/: __init__.py  celery_app.py
backend/migrations/: env.py
backend/seeds/: 0001_sample_crawl_configs.py  0002_sample_schedules.py
backend/tests/: __init__.py
(+122 files in other folders)
