[project]
name = "pilgrim"
version = "0.1.0"
description = "Config-driven scraping and crawling microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Task queue
    "celery[redis]>=5.4.0",

    # Redis
    "redis>=5.0.0",

    # Scraping — [fetchers] pulls all Python deps (curl_cffi, playwright,
    # browserforge, etc.).  Actual browser binaries are NOT installed here;
    # that happens only in the worker Dockerfile via `scrapling install`.
    "scrapling[fetchers]>=0.4",

    # HTTP client (for API clients, not HTML scraping)
    "httpx>=0.27.0",

    # Email (async SMTP for notifications)
    "aiosmtplib>=3.0.0",

    # Logging
    "structlog>=24.1.0",

    # Utilities
    "python-multipart>=0.0.9",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
fetchers = [
    "scrapling[fetchers]>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
